# tg_bot_backend

./: .gitignore  README.md  channel_overview.txt  config.txt  demo.py  env.py  main.py  monitor.py  my_groups.txt  operater.txt  pyproject.toml  task.py  test.py  top_groups.txt  web3_helper.py
db/: db.py  utils.py
handlers/: handlers.py  join_handler-bk.py  join_handler.py  kolistats_handler.py  points_handler.py  push_handler.py  signal_handler.py  start_handler.py  top_groups_handler.py  wallet_handler.py
handlers/group/: answer_handler.py  err_handler.py  greet_handler.py  predict_handler.py  quote_handler.py  recommend_handler.py  summary_handler.py  wake_handler.py
notify/: notify.py
sched_task/: daily_pnl.py  daily_poll.py  daily_push.py  predict_price.py
service/: equity.py  quote.py  strategy.py  swap_tracer.py
wallet/: wallet.py
